<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="?attr/colorOnSurface"
        app:subtitleTextColor="@android:color/darker_gray"
        android:minHeight="?attr/actionBarSize">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/chevron_left_24px"
            android:contentDescription="@string/back" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:singleLine="true"
                android:contentDescription="@string/filename" />

            <TextView
                android:layout_gravity="center"
                android:id="@+id/subtitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                android:singleLine="true"
                android:contentDescription="@string/resolution" />

            <ImageButton
                android:id="@+id/btnInfo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end|center"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/properties"
                android:src="@drawable/baseline_info_24" />
        </FrameLayout>



    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false" />

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <CheckBox
            android:id="@+id/batchCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/select_for_batch" />

        <TextView
            android:id="@+id/counterText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/edit_24px"
            android:contentDescription="@string/edit" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/baseline_delete_24"
            android:contentDescription="@string/delete" />

        <ImageButton
            android:id="@+id/btnShare"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/baseline_share_24"
            android:contentDescription="@string/share_text" />

        <ImageButton
            android:id="@+id/btnOpenWith"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/baseline_open_in_new_24"
            android:contentDescription="@string/open_with" />

    </LinearLayout>

</LinearLayout>
