<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/fileIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/file_icon"
        android:layout_gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/fileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:contentDescription="@string/filename"/>

        <TextView
            android:id="@+id/fileDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="10sp"
            android:contentDescription="@string/file_info_cd"/>
    </LinearLayout>

</LinearLayout>